Bug 63389 - localectl list-locales shows locale names in wrong encoding
Summary: localectl list-locales shows locale names in wrong encoding
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-10 15:43 UTC by Zbigniew Jedrzejewski-Szmek
Modified: 2013-04-10 21:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Zbigniew Jedrzejewski-Szmek 2013-04-10 15:43:36 UTC
$ rpm -q systemd
systemd-200-4.fc19.x86_64

$ localectl list-locales
...
bokmal
bokm<E5>l
...
fran<E7>ais
french
...

$ localectl list-locales | grep fran | iconv -f iso8859-1
français

$ locale
LANG=en_US.UTF-8
LC_CTYPE="en_US.UTF-8"
LC_NUMERIC="en_US.UTF-8"
LC_TIME="en_US.UTF-8"
LC_COLLATE="en_US.UTF-8"
LC_MONETARY="en_US.UTF-8"
LC_MESSAGES="en_US.UTF-8"
LC_PAPER="en_US.UTF-8"
LC_NAME="en_US.UTF-8"
LC_ADDRESS="en_US.UTF-8"
LC_TELEPHONE="en_US.UTF-8"
LC_MEASUREMENT="en_US.UTF-8"
LC_IDENTIFICATION="en_US.UTF-8"
LC_ALL=
Comment 1 Lennart Poettering 2013-04-10 21:21:46 UTC
Seems the data in the locale archive is in iso8859-1. This should probably be fixed in glibc. In the meantime, since those language names are aliases anyway I have now added code to simply skip all non-UTF8 language names.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.